adding a list view to display songs and pause play and previous buttons

--- a/MusicPlayer/app/src/main/res/layout/listitem.xml
+++ b/MusicPlayer/app/src/main/res/layout/listitem.xml
@@ -30,6 +30,11 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:elipsize="end"
+            android:gravity="right"
+            android:singleLine="true"
+            android:textSize="15dip"
+
 
             />
     </LinearLayout>
