--- a/MusicPlayer/app/src/main/res/layout/activity_play_music.xml
+++ b/MusicPlayer/app/src/main/res/layout/activity_play_music.xml
@@ -1,11 +1,72 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PlayMusic">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+      <ListView
+          android:id="@android:id/list"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="1.0"
+          android:background="@android:drawable/screen_background_dark_transparent"
 
-</RelativeLayout>
+          />
+    <LinearLayout
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:background="@android:drawable/screen_background_light"
+          android:orientation="vertical"
+          android:padding="10dip"
+            >
+       <TextView
+           android:id="@+id/selectedfile"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:ellipsize="middle"
+           android:gravity="center_horizontal"
+           android:singleLine="true"
+           android:text= "Select a file"
+           android:textColor="@android:color/darker_gray"
+          />
+        <SeekBar
+            android:id="@+id/seekbar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:paddingBottom="10dip"
+            />
+          <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/screen_background_light"
+            android:gravity="center"
+              android:orientation="horizontal"
+              >
+               <ImageButton
+                   android:id="@+id/prev"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@android:drawable/ic_media_previous"
+                   />
+              <ImageButton
+                  android:id="@+id/play"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:src="@android:drawable/ic_media_play"
+                  />
+              <ImageButton
+                  android:id="@+id/next"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:src="@android:drawable/ic_media_next"
+                  />
+
+            </LinearLayout>
+    </LinearLayout>
+
+
+
+</LinearLayout>
