--- a/MusicPlayer/app/src/main/res/layout/listitem.xml
+++ b/MusicPlayer/app/src/main/res/layout/listitem.xml
@@ -28,6 +28,7 @@
 
               />
         <TextView
+            android:id="@+id/duration"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:elipsize="end"
