--- a/MusicPlayer/app/src/main/res/layout/listitem.xml
+++ b/MusicPlayer/app/src/main/res/layout/listitem.xml
@@ -10,7 +10,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="18dip"
-        android:textSyle="bold"
+        android:textStyle="bold"
 />
     <LinearLayout
         android:layout_width="fill_parent"
@@ -31,7 +31,7 @@
             android:id="@+id/duration"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:elipsize="end"
+            android:ellipsize="end"
             android:gravity="right"
             android:singleLine="true"
             android:textSize="15dip"
